--- a/application/themes/frostbret/assets/css/parts/banner.css
+++ b/application/themes/frostbret/assets/css/parts/banner.css
@@ -12,9 +12,9 @@
 	vertical-align: middle;
 }
 
-.section-banner .container .row {}
+/*.section-banner .container .row {}
 
-.section-banner .container .row .col-sm-12 {}
+.section-banner .container .row .col-sm-12 {}*/
 
 .section-banner .container .row .col-sm-12 .btn-large-holder {
 	margin: 0 auto;
