--- a/application/themes/frostbret/assets/css/parts/header.css
+++ b/application/themes/frostbret/assets/css/parts/header.css
@@ -221,9 +221,9 @@ h1 {
 
 /* Navbar: Navigation
 /*---------------------------------------------------------------*/
-.header .navbar .navbar-nav {}
+/*.header .navbar .navbar-nav {}
 
-.header .navbar .navbar-nav .nav-item {}
+.header .navbar .navbar-nav .nav-item {}*/
 
 /* Navigation: Link
 /*-----------------------------------------------------*/
