--- a/application/themes/frostbret/assets/css/parts/slider.css
+++ b/application/themes/frostbret/assets/css/parts/slider.css
@@ -170,7 +170,7 @@
 /*-------------------------------------------------------------------------*/
 /* Slider (text)
 /*-------------------------------------------------------------------------*/
-#section-slider.section-text-slider {}
+/*#section-slider.section-text-slider {}*/
 
 /* Slider: Button
 /*---------------------------------------------------------------*/
