--- a/application/themes/frostbret/assets/css/parts/widgets.css
+++ b/application/themes/frostbret/assets/css/parts/widgets.css
@@ -1,9 +1,9 @@
 /*-------------------------------------------------------------------------*/
 /* Widgets
 /*-------------------------------------------------------------------------*/
-.section-widgets {}
+/*.section-widgets {}
 
-.section-widgets [widget] {}
+.section-widgets [widget] {}*/
 
 .section-widgets [widget] iframe {
 	width: 100%;
