--- a/application/themes/frostbret/assets/css/global/tables.css
+++ b/application/themes/frostbret/assets/css/global/tables.css
@@ -1,24 +1,24 @@
 /*-------------------------------------------------------------------------*/
 /* nice_table
 /*-------------------------------------------------------------------------*/
-nice_table {
+.nice_table {
 	border-spacing: 0 !important;
 	border-collapse: collapse;
 }
 
-nice_table thead {}
+/*nice_table thead {}
 
-nice_table thead tr {}
+nice_table thead tr {}*/
 
-nice_table thead tr th {
+.nice_table thead tr th {
 	vertical-align: middle;
 }
 
-nice_table tbody {}
+/*.nice_table tbody {}
 
-nice_table tbody tr {}
+.nice_table tbody tr {}*/
 
-nice_table tbody tr td {
+.nice_table tbody tr td {
 	vertical-align: middle;
 }
 
@@ -31,7 +31,7 @@ nice_table tbody tr td {
 
 /* Nice nice_table: Head
 /*---------------------------------------------------------------*/
-.nice_table thead {}
+/*.nice_table thead {}*/
 
 .nice_table thead tr,
 .nice_table tbody tr:first-child {
@@ -55,7 +55,7 @@ nice_table tbody tr td {
 
 /* Nice nice_table: Body
 /*---------------------------------------------------------------*/
-.nice_table tbody {}
+/*.nice_table tbody {}*/
 
 .nice_table thead + tbody::before {
 	width: 100%;
