Theme/Heaven: Unexpected empty block

--- a/application/themes/heaven/assets/css/global/popup.css
+++ b/application/themes/heaven/assets/css/global/popup.css
@@ -93,5 +93,5 @@
 	margin: 0 0.5rem;
 }
 
-.popup-box .popup-buttons .popup-button.type-action {}
+/*.popup-box .popup-buttons .popup-button.type-action {}*/
 .popup-box .popup-buttons .popup-button.type-cancel {-webkit-filter: grayscale(0.3); filter: grayscale(0.3);}
