--- a/application/themes/heaven/assets/css/parts/footer.css
+++ b/application/themes/heaven/assets/css/parts/footer.css
@@ -67,7 +67,7 @@
 
 /* Footer: Navbar
 /*---------------------------------------------------------------*/
-.footer .footer-navbar {}
+/*.footer .footer-navbar {}*/
 
 .footer .footer-navbar .navbar-nav {
 	margin: -0.3rem;
