--- a/application/themes/heaven/assets/css/parts/sidebox.css
+++ b/application/themes/heaven/assets/css/parts/sidebox.css
@@ -55,7 +55,7 @@
 /*-------------------------------------------------------------------------*/
 /* Sidebox (widget top)
 /*-------------------------------------------------------------------------*/
-.sidebox[widget='top'] {}
+/*.sidebox[widget='top'] {}*/
 
 /*-------------------------------------------------------------------------*/
 /* Sidebox (widget side)
@@ -71,4 +71,4 @@
 /*-------------------------------------------------------------------------*/
 /* Sidebox (widget bottom)
 /*-------------------------------------------------------------------------*/
-.sidebox[widget='bottom'] {}
+/*.sidebox[widget='bottom'] {}*/
