--- a/application/themes/heaven/assets/css/parts/featured.css
+++ b/application/themes/heaven/assets/css/parts/featured.css
@@ -122,7 +122,7 @@
 }
 
 @media screen and (min-width: 1200px) { /* xl */
-	.featured-banner {}
+	/*.featured-banner {}*/
 
 	/* Featured: Title
 	/*---------------------------------------------------------------*/
