Theme/Heaven: Unexpected empty block

--- a/application/themes/heaven/modules/auth/css/auth.css
+++ b/application/themes/heaven/modules/auth/css/auth.css
@@ -1,7 +1,7 @@
 /*-------------------------------------------------------------------------*/
 /* Auth
 /*-------------------------------------------------------------------------*/
-.page-auth {}
+/*.page-auth {}*/
 
 /* Auth: Page head
 /*---------------------------------------------------------------*/
@@ -11,7 +11,7 @@
 
 /* Auth: Form
 /*---------------------------------------------------------------*/
-.page-auth form {}
+/*.page-auth form {}*/
 
 /* Auth: Form: Input group
 /*-----------------------------------------------------*/
