--- a/application/themes/heaven/modules/item/css/item.css
+++ b/application/themes/heaven/modules/item/css/item.css
@@ -1,7 +1,7 @@
 /*-------------------------------------------------------------------------*/
 /* Item
 /*-------------------------------------------------------------------------*/
-.page-item {}
+/*.page-item {}*/
 
 /* Item: Page head
 /*---------------------------------------------------------------*/
