--- a/application/themes/heaven/modules/sidebox_info_login/css/info_login.css
+++ b/application/themes/heaven/modules/sidebox_info_login/css/info_login.css
@@ -1,7 +1,7 @@
 /*-------------------------------------------------------------------------*/
 /* [Sidebox] Info_login
 /*-------------------------------------------------------------------------*/
-.sidebox.sidebox-info_login {}
+/*.sidebox.sidebox-info_login {}*/
 
 /* [Sidebox] Info_login: Info
 /*---------------------------------------------------------------*/
