--- a/application/themes/heaven/modules/armory/css/armory.css
+++ b/application/themes/heaven/modules/armory/css/armory.css
@@ -1,7 +1,7 @@
 /*-------------------------------------------------------------------------*/
 /* Armory
 /*-------------------------------------------------------------------------*/
-.page-armory {}
+/*.page-armory {}*/
 
 /* Armory: Subbody
 /*---------------------------------------------------------------*/
@@ -29,7 +29,7 @@
 
 /* Armory: Table
 /*---------------------------------------------------------------*/
-.page-armory .dataTables_wrapper {}
+/*.page-armory .dataTables_wrapper {}*/
 
 .page-armory .dataTables_wrapper .row + .row + .row {
 	margin: var(--margin-primary) 0 0 0;
@@ -63,7 +63,7 @@
 /* Armory: Responsive
 /*---------------------------------------------------------------*/
 @media screen and (min-width: 992px) { /* LG */
-	.page-armory {}
+	/*.page-armory {}*/
 
 	/* Armory: Fields
 	/*---------------------------------------------------------------*/
@@ -89,7 +89,7 @@
 
 	/* Armory: Table
 	/*---------------------------------------------------------------*/
-	.page-armory .dataTables_wrapper {}
+	/*.page-armory .dataTables_wrapper {}*/
 
 	.page-armory .dataTables_wrapper .row + .row + .row {
 		text-align: left;
