--- a/application/themes/heaven/modules/errors/css/errors.css
+++ b/application/themes/heaven/modules/errors/css/errors.css
@@ -1,7 +1,7 @@
 /*-------------------------------------------------------------------------*/
 /* Errors
 /*-------------------------------------------------------------------------*/
-.page-errors {}
+/*.page-errors {}*/
 
 /* Errors: Page head
 /*---------------------------------------------------------------*/
