--- a/application/themes/default/modules/auth/css/auth.css
+++ b/application/themes/default/modules/auth/css/auth.css
@@ -1,7 +1,7 @@
 /*-------------------------------------------------------------------------*/
 /* Auth
 /*-------------------------------------------------------------------------*/
-.box.type-auth {}
+/*.box.type-auth {}*/
 
 .box.type-auth .form-switch {
 	padding-left: 0;
