--- a/application/themes/default/modules/news/css/news.css
+++ b/application/themes/default/modules/news/css/news.css
@@ -1,7 +1,7 @@
 /*-------------------------------------------------------------------------*/
 /* Owl Carousel (custom)
 /*-------------------------------------------------------------------------*/
-.owl-carousel {}
+/*.owl-carousel {}*/
 
 .owl-carousel.owl-dots-inside\[pos\:top\] .owl-dots,
 .owl-carousel.owl-dots-inside\[pos\:bottom\] .owl-dots {
