--- a/application/themes/default/modules/sidebox_info_login/css/info_login.css
+++ b/application/themes/default/modules/sidebox_info_login/css/info_login.css
@@ -1,7 +1,7 @@
 /*-------------------------------------------------------------------------*/
 /* [Sidebox] Info_login
 /*-------------------------------------------------------------------------*/
-.box.type-info_login {}
+/*.box.type-info_login {}*/
 
 /* [Sidebox] Info_login: Info
 /*---------------------------------------------------------------*/
