--- a/application/themes/default/modules/sidebox_menu/css/menu.css
+++ b/application/themes/default/modules/sidebox_menu/css/menu.css
@@ -31,7 +31,7 @@
 	height: auto;
 }
 
-.box.type-menu .navbar .navbar-nav .nav-item {}
+/*.box.type-menu .navbar .navbar-nav .nav-item {}*/
 
 /* Navbar: Link (idle) */
 .box.type-menu .navbar .navbar-nav .nav-item .nav-link {
