--- a/application/themes/frostbret/assets/css/parts/topbar.css
+++ b/application/themes/frostbret/assets/css/parts/topbar.css
@@ -300,8 +300,8 @@
 	.section-topbar .membership-bar .membership-bar-nav .navbar   {display: block;}
 }
 
-.dropdown {
-}
+/*.dropdown {
+}*/
 .dropdown .dropdown-menu {
     border:1px solid #538cad;
     padding:0;
@@ -323,8 +323,8 @@
     background:linear-gradient(to bottom,rgba(45,112,178,0.17) 0%,rgba(45,112,178,0.07) 48%,rgba(45,112,178,0) 100%);
     filter:progid:DXImageTransform.Microsoft.gradient( startColorstr='#2b2d70b2', endColorstr='#002d70b2',GradientType=0 );
 }
-.dropdown .dropdown-menu li {
-}
+/*.dropdown .dropdown-menu li {
+}*/
 .dropdown .dropdown-menu li .dropdown-item {
     color:#c8e8ed;
     z-index:9;
