--- a/application/css/tooltip.css
+++ b/application/css/tooltip.css
@@ -1,15 +1,34 @@
 #fusion_tooltip, .fusion_tooltip {
-    background-color:#070c21;
-    background-color: rgba(7,12,33,0.9);
-    border:1px solid #777777;
-    border-top:1px solid #cfcfcf;
-    -webkit-box-shadow: 0px 0px 3px #000;
-    -moz-box-shadow: 0px 0px 3px #000;
-    box-shadow: 0px 0px 3px #000;
+    background-color: #0f0f0f !important;
+    border: 1px solid #1e1e1e !important;
+    -webkit-box-shadow: 0 0 3px #000;
+    -moz-box-shadow: 0 0 3px #000;
+    box-shadow: 0 0 3px #000;
     color: #fff;
     position: absolute;
     z-index: 9999999;
     padding:1rem;
+}
+#fusion_tooltip pp, #fusion_tooltip pp {
+    position: absolute;
+    left: -44px;
+    top: -18px;
+    width: 44px;
+    height: 44px;
+    background: 4px 4px no-repeat;
+    margin: 0;
+    padding: 0;
+}
+#fusion_tooltip pp, #fusion_tooltip pp {
+    background-color: #0f0f0f !important;
+    left: -65px !important;
+    height: 44px !important;
+    width: 44px !important;
+}
+#fusion_tooltip pp div, .fusion_tooltip pp div {
+    height: 42px !important;
+    width: 42px !important;
+    border: 1px solid #1e1e1e !important;
 }
 .character-tooltip .icon-frame.frame-56 {
     position: absolute;
