--- a/application/css/default.css
+++ b/application/css/default.css
@@ -515,10 +515,11 @@ input[type="radio"] {
 .gem14 {color: #fff !important}
 
 /* Sockets */
-.socket-meta   { padding-left: 20px; background: url(../images/misc/socket_meta.gif) no-repeat left center; }
-.socket-red    { padding-left: 20px; background: url(../images/misc/socket_red.gif) no-repeat left center; }
-.socket-yellow { padding-left: 20px; background: url(../images/misc/socket_yellow.gif) no-repeat left center; }
-.socket-blue   { padding-left: 20px; background: url(../images/misc/socket_blue.gif) no-repeat left center; }
+.socket-meta       { padding-left: 20px; background: url(../images/misc/socket_meta.gif) no-repeat left center; }
+.socket-red        { padding-left: 20px; background: url(../images/misc/socket_red.gif) no-repeat left center; }
+.socket-yellow     { padding-left: 20px; background: url(../images/misc/socket_yellow.gif) no-repeat left center; }
+.socket-blue       { padding-left: 20px; background: url(../images/misc/socket_blue.gif) no-repeat left center; }
+.socket-prismatic  { padding-left: 20px; background: url(../images/misc/socket-prismatic.gif) no-repeat left center; }
 
 .moneygold {
     display: inline-block;
