--- a/application/css/default.css
+++ b/application/css/default.css
@@ -523,6 +523,7 @@ input[type="radio"] {
 .socket-blue       { padding-left: 20px; background: url(../images/misc/socket_blue.gif) no-repeat left center; }
 .socket-prismatic  { padding-left: 20px; background: url(../images/misc/socket-prismatic.gif) no-repeat left center; }
 .socket-cogwheel   { padding-left: 20px; background: url(../images/misc/socket-cogwheel.gif) no-repeat left center; }
+.socket-domination   { padding-left: 20px; background: url(../images/misc/socket-domination.gif) no-repeat left center; }
 
 .moneygold {
     display: inline-block;
