--- a/system/Debug/Toolbar/Views/toolbar.css
+++ b/system/Debug/Toolbar/Views/toolbar.css
@@ -18,6 +18,10 @@
   clear: both;
   text-align: center;
   cursor: pointer;
+  background-color: #FFFFFF;
+  box-shadow: 0 0 4px #DFDFDF;
+  -moz-box-shadow: 0 0 4px #DFDFDF;
+  -webkit-box-shadow: 0 0 4px #DFDFDF;
 }
 #debug-icon a svg {
   margin: 8px;
@@ -47,6 +51,8 @@
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
   font-size: 16px;
   font-weight: 400;
+  background-color: #FFFFFF;
+  color: #434343;
 }
 #debug-bar h1 {
   display: flex;
@@ -62,7 +68,7 @@
 #debug-bar h2 {
   font-size: 16px;
   margin: 0;
-  padding: 5px 0 10px 0;
+  padding: 5px 0 10px;
 }
 #debug-bar h2 span {
   font-size: 13px;
@@ -92,6 +98,7 @@
   -webkit-border-radius: 4px;
   cursor: pointer;
   line-height: 15px;
+  background-color: #FFFFFF;
 }
 #debug-bar button:hover {
   text-decoration: underline;
@@ -100,11 +107,12 @@
   border-collapse: collapse;
   font-size: 14px;
   line-height: normal;
-  margin: 5px 10px 15px 10px;
+  margin: 5px 10px 15px;
   width: calc(100% - 10px);
 }
 #debug-bar table strong {
   font-weight: 500;
+  color: #DD8615;
 }
 #debug-bar table th {
   display: table-cell;
@@ -143,9 +151,13 @@
   display: flex;
   overflow: hidden;
   overflow-y: auto;
-  padding: 0 12px 0 12px;
+  padding: 0 12px;
   white-space: nowrap;
   z-index: 10000;
+  background-color: #FFFFFF;
+  box-shadow: 0 0 4px #DFDFDF;
+  -moz-box-shadow: 0 0 4px #DFDFDF;
+  -webkit-box-shadow: 0 0 4px #DFDFDF;
 }
 #debug-bar .toolbar .rotate {
   animation: toolbar-rotate 9s linear infinite;
@@ -162,6 +174,9 @@
 #debug-bar.fixed-top .tab {
   bottom: auto;
   top: 36px;
+  box-shadow: 0 1px 4px #DFDFDF;
+  -moz-box-shadow: 0 1px 4px #DFDFDF;
+  -webkit-box-shadow: 0 1px 4px #DFDFDF;
 }
 #debug-bar #toolbar-position,
 #debug-bar #toolbar-theme {
@@ -188,6 +203,7 @@
 }
 #debug-bar .ci-label:hover {
   cursor: pointer;
+  background-color: #DFDFDF;
 }
 #debug-bar .ci-label a {
   color: inherit;
@@ -214,6 +230,8 @@
   text-align: center;
   vertical-align: baseline;
   white-space: nowrap;
+  background-color: #DD4814;
+  color: #FFFFFF;
 }
 #debug-bar .tab {
   bottom: 35px;
@@ -226,6 +244,10 @@
   position: fixed;
   right: 0;
   z-index: 9999;
+  background-color: #FFFFFF;
+  box-shadow: 0 -1px 4px #DFDFDF;
+  -moz-box-shadow: 0 -1px 4px #DFDFDF;
+  -webkit-box-shadow: 0 -1px 4px #DFDFDF;
 }
 #debug-bar .timeline {
   margin-left: 0;
@@ -235,7 +257,7 @@
   border-left: 1px solid;
   font-size: 12px;
   font-weight: 200;
-  padding: 5px 5px 10px 5px;
+  padding: 5px 5px 10px;
   position: relative;
   text-align: left;
 }
@@ -268,6 +290,7 @@
   padding: 5px;
   position: absolute;
   top: 30%;
+  background-color: #DD8615;
 }
 #debug-bar .timeline .timeline-parent {
   cursor: pointer;
@@ -305,8 +328,8 @@
 }
 
 .debug-view.show-view {
-  border: 1px solid;
   margin: 4px;
+  border: 1px solid #DD8615;
 }
 
 .debug-view-path {
@@ -316,6 +339,8 @@
   min-height: 16px;
   padding: 2px;
   text-align: left;
+  background-color: #FDC894;
+  color: #434343;
 }
 
 .show-view .debug-view-path {
@@ -330,22 +355,12 @@
     display: none !important;
   }
 }
-#debug-icon {
-  background-color: #FFFFFF;
-  box-shadow: 0 0 4px #DFDFDF;
-  -moz-box-shadow: 0 0 4px #DFDFDF;
-  -webkit-box-shadow: 0 0 4px #DFDFDF;
-}
 #debug-icon a:active,
 #debug-icon a:link,
 #debug-icon a:visited {
   color: #DD8615;
 }
 
-#debug-bar {
-  background-color: #FFFFFF;
-  color: #434343;
-}
 #debug-bar h1,
 #debug-bar h2,
 #debug-bar h3,
@@ -356,16 +371,9 @@
 #debug-bar thead,
 #debug-bar tr,
 #debug-bar td,
-#debug-bar button,
 #debug-bar .toolbar {
   background-color: transparent;
   color: #434343;
-}
-#debug-bar button {
-  background-color: #FFFFFF;
-}
-#debug-bar table strong {
-  color: #DD8615;
 }
 #debug-bar table tbody tr:hover {
   background-color: #DFDFDF;
@@ -377,12 +385,6 @@
   background-color: #DD4814;
   color: #FFFFFF;
 }
-#debug-bar .toolbar {
-  background-color: #FFFFFF;
-  box-shadow: 0 0 4px #DFDFDF;
-  -moz-box-shadow: 0 0 4px #DFDFDF;
-  -webkit-box-shadow: 0 0 4px #DFDFDF;
-}
 #debug-bar .toolbar img {
   filter: brightness(0) invert(0.4);
 }
@@ -390,11 +392,6 @@
   box-shadow: 0 0 4px #DFDFDF;
   -moz-box-shadow: 0 0 4px #DFDFDF;
   -webkit-box-shadow: 0 0 4px #DFDFDF;
-}
-#debug-bar.fixed-top .tab {
-  box-shadow: 0 1px 4px #DFDFDF;
-  -moz-box-shadow: 0 1px 4px #DFDFDF;
-  -webkit-box-shadow: 0 1px 4px #DFDFDF;
 }
 #debug-bar .muted {
   color: #434343;
@@ -412,34 +409,9 @@
 #debug-bar .ci-label.active {
   background-color: #DFDFDF;
 }
-#debug-bar .ci-label:hover {
-  background-color: #DFDFDF;
-}
-#debug-bar .ci-label .badge {
-  background-color: #DD4814;
-  color: #FFFFFF;
-}
-#debug-bar .tab {
-  background-color: #FFFFFF;
-  box-shadow: 0 -1px 4px #DFDFDF;
-  -moz-box-shadow: 0 -1px 4px #DFDFDF;
-  -webkit-box-shadow: 0 -1px 4px #DFDFDF;
-}
 #debug-bar .timeline th,
 #debug-bar .timeline td {
   border-color: #DFDFDF;
-}
-#debug-bar .timeline .timer {
-  background-color: #DD8615;
-}
-
-.debug-view.show-view {
-  border-color: #DD8615;
-}
-
-.debug-view-path {
-  background-color: #FDC894;
-  color: #434343;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -468,7 +440,6 @@
   #debug-bar thead,
   #debug-bar tr,
   #debug-bar td,
-  #debug-bar button,
   #debug-bar .toolbar {
     background-color: transparent;
     color: #DFDFDF;
@@ -519,10 +490,6 @@
   }
   #debug-bar .muted:hover td {
     color: #DFDFDF;
-  }
-  #debug-bar #toolbar-position,
-  #debug-bar #toolbar-theme {
-    filter: brightness(0) invert(0.6);
   }
   #debug-bar .ci-label.active {
     background-color: #252525;
@@ -580,7 +547,6 @@
 #toolbarContainer.dark #debug-bar thead,
 #toolbarContainer.dark #debug-bar tr,
 #toolbarContainer.dark #debug-bar td,
-#toolbarContainer.dark #debug-bar button,
 #toolbarContainer.dark #debug-bar .toolbar {
   background-color: transparent;
   color: #DFDFDF;
@@ -696,7 +662,6 @@
 #toolbarContainer.light #debug-bar thead,
 #toolbarContainer.light #debug-bar tr,
 #toolbarContainer.light #debug-bar td,
-#toolbarContainer.light #debug-bar button,
 #toolbarContainer.light #debug-bar .toolbar {
   background-color: transparent;
   color: #434343;
